#4 Checkstyle improvements